# hivra-network

./: .gitignore  Cargo.toml  README.md
.cargo/: .crates.toml  .crates2.json
adapters/hivra-nostr-crypto/: Cargo.toml
adapters/hivra-nostr-crypto/src/: lib.rs
adapters/hivra-transport/: Cargo.toml
core/hivra-core/: Cargo.toml
core/hivra-core/src/: capsule.rs  event.rs  event_payloads.rs  invitation.rs  ledger.rs  lib.rs  primitives.rs  relationship.rs  slot.rs  starter.rs
core/hivra-core/tests/: basic_scenarios.rs
core/hivra-engine/: Cargo.toml
core/hivra-engine/src/: lib.rs
core/hivra-nostr-crypto/: Cargo.toml
core/hivra-transport/: Cargo.toml
core/hivra-transport/src/: lib.rs
core/hivra-transport/src/nostr/: mod.rs
docs/: README.md  hivra-v3.2-conceptual-model.md  specification.md
docs/releases/: v3.2.12-macos.md
flutter/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/hivra/hivra_app/: MainActivity.kt
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart  main_screen.dart  test_load.dart
flutter/lib/ffi/: hivra_bindings.dart
flutter/lib/models/: invitation.dart  relationship.dart  starter.dart
flutter/lib/screens/: backup_and_recovery_screens.dart  backup_screen.dart  capsule_selector_screen.dart  first_launch_screen.dart  invitations_screen.dart  ledger_backup_recovery.dart  ledger_inspector_screen.dart  main_screen.dart  recovery_screen.dart  relationships_screen.dart  settings_screen.dart  starters_screen.dart
flutter/lib/services/: capsule_backup_codec.dart  capsule_file_store.dart  capsule_index_store.dart  capsule_ledger_snapshot.dart  capsule_ledger_summary_parser.dart  capsule_persistence_models.dart  capsule_persistence_service.dart  capsule_runtime_bootstrap_service.dart  capsule_seed_store.dart  capsule_service_test.dart  capsule_state_manager.dart  invitation_projection_service.dart  ledger_view_service.dart  ledger_view_support.dart  relationship_projection_service.dart
flutter/lib/widgets/: invitation_card.dart  relationship_card.dart  starter_slot.dart
flutter/linux/: CMakeLists.txt
flutter/linux/runner/: my_application.cc
flutter/macos/: copy_ffi.sh  libhivra_ffi.dylib
flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/macos/Frameworks/: libhivra_ffi.dylib
flutter/macos/Runner/: EmbedFrameworks.sh
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
platform/hivra-ffi/: Cargo.toml
platform/hivra-ffi/src/: ffi_support.rs  invitation_support.rs  lib.rs  runtime_support.rs  seed_api.rs  selfcheck_api.rs  stubs.rs  tests.rs
platform/hivra-keystore/: Cargo.toml
platform/hivra-keystore/src/: lib.rs
platform/hivra-keystore/src/android/: mod.rs
platform/hivra-keystore/src/macos/: mod.rs
tools/: cleanup_legacy_keychain.sh
tools/review/: README.md  dependency_check.sh  review_all.sh  security_check.sh  topology_check.sh
