[workspace]
resolver = "2"
members = [
    "core/hivra-core",
    "core/hivra-engine", 
    "adapters/hivra-transport",
    "adapters/hivra-nostr-crypto",
    "platform/hivra-keystore",
    "platform/hivra-ffi",
]

[workspace.package]
version = "3.2.13"
edition = "2021"
license = "MIT"
authors = ["Hivra Team"]
