[package]
name = "hivra-nostr-crypto"
version = "3.2.13"
edition = "2021"
description = "Nostr secp256k1 CryptoProvider adapter for Hivra Engine"
license = "MIT"

[dependencies]
hivra-engine = { path = "../../core/hivra-engine" }
secp256k1 = { version = "0.29", features = ["std", "rand", "serde"] }

[features]
default = ["std"]
std = []
