[package]
name = "hivra-core"
version = "3.2.7"
edition = "2021"
authors = ["Hivra Team"]
license = "MIT"
description = "Core domain logic for Hivra"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"
hex = "0.4"
ripemd = "0.1"
sha2 = { version = "0.10", default-features = false }
thiserror = "1.0"

[features]
default = ["std"]
std = ["serde/std", "serde_bytes/std", "hex/std", "ripemd/std", "sha2/std"]
# bincode and thiserror do not expose a `std` feature
