[package]
name = "hivra-nostr-crypto"
version = "0.1.0"
edition = "2021"
description = "Nostr secp256k1 CryptoProvider adapter for Hivra Engine"
license = "MIT"

[dependencies]
hivra-engine = { path = "../hivra-engine" }
secp256k1 = { version = "0.29", features = ["std", "rand", "serde"] }

[features]
default = ["std"]
std = []
