[package]
name = "hivra-ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI bindings for Hivra"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
hivra-keystore = { path = "../hivra-keystore" }
hivra-core = { path = "../../core/hivra-core" }
hivra-engine = { path = "../../core/hivra-engine" }
hivra-nostr-crypto = { path = "../../core/hivra-nostr-crypto" }
hivra-transport = { path = "../../core/hivra-transport" }
nostr-sdk = "0.36"
futures = "0.3"
rand = "0.8"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
bip39 = { version = "2.0", default-features = false, features = ["std"] }
zeroize = "1.7"
sha2 = "0.10"
once_cell = "1.21"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
